# FpDebug

./: README  README.adoc  install_gmp.sh  install_mpfr.sh  install_valgrind.sh
docker/ubuntu-12.04/: Dockerfile
docker/ubuntu-16.04/: Dockerfile
docker/ubuntu-16.10/: Dockerfile
gmp/: HOWTO  README  gmp-5.0.1.patch
mpfr/: HOWTO  README  mpfr-3.0.0.patch  valgrind_additions.c
valgrind/: HOWTO  README  README.adoc  configure_updated
valgrind/fpdebug/: Makefile.am  Makefile.in  Makefile_template.in  fd_include.h  fd_main.c  fpdebug.h  opToString.c
valgrind/fpdebug/examples/: README  cancellation.c  machine_epsilon.c  malcoms_algorithm.c  mindless_g.c  pendulum.cpp  pendulum_cromer.cpp  pendulum_double.cpp  pendulum_no_cmath.cpp  special_numbers.c  stages_1.c  stages_2.c  stages_3.c  test_1.c  test_2.c  test_2_double.c  test_3.c  test_4.c  test_4_float.c  test_double.c  test_error_greater.c  test_func.c  wrong_limit.c
